# Hackathon-2-The-Evolution-of-Todo

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  build.sh  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
phase-01-cli-app/: README.md  pyproject.toml
phase-01-cli-app/src/services/: task_service.py
phase-01-cli-app/tests/: test_task_service.py
phase-02-fullstack-app/: README.md
phase-02-fullstack-app/backend/: .gitignore  CLAUDE.md  alembic.ini  init_db.py  pyproject.toml  requirements.txt
phase-02-fullstack-app/backend/alembic/: env.py
phase-02-fullstack-app/backend/scripts/: create_test_user.py  debug_register.py  init_db.py
phase-02-fullstack-app/backend/src/: __init__.py  main.py
phase-02-fullstack-app/backend/src/api/v1/: auth.py  tasks.py
phase-02-fullstack-app/backend/src/auth/: __init__.py  hashing.py  jwt.py
phase-02-fullstack-app/backend/src/config/: __init__.py
phase-02-fullstack-app/backend/src/database/: __init__.py  session.py
phase-02-fullstack-app/backend/src/middleware/: auth_middleware.py  rate_limit.py
phase-02-fullstack-app/backend/src/models/: __init__.py  task.py  user.py
phase-02-fullstack-app/backend/src/schemas/: __init__.py  task.py  user.py
phase-02-fullstack-app/backend/src/services/: task_service.py  user_service.py
phase-02-fullstack-app/backend/src/utils/: __init__.py  api_helpers.py  cleanup.py  exceptions.py  logger.py  logging.py  performance.py
phase-02-fullstack-app/backend/tests/integration/: test_api_endpoints.py  test_backend.py  test_client.py  test_http.py  test_integration.py
phase-02-fullstack-app/backend/tests/unit/: test_user_service.py
phase-02-fullstack-app/frontend/: .env.example  CLAUDE.md  (+5 more)
src/: main.py
tests/: test_task.py
(+34 files in other folders)
