[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fullstack-todo-backend"
version = "1.0.0"
description = "Backend for the Full-Stack Web Todo Application"
authors = [{name = "Developer", email = "dev@example.com"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "passlib[argon2]>=1.7.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "email-validator>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "fastapi-cli>=0.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/conftest.py"]